--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>{{base_title}}</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='test.css') }}"/>
     </head>
-<body>
+    <body>
+        <nav>
+            <ul id="user-account">
+                <li><a class='link' href="/login">Login</a></li>
+                <li><a class='link' href="/logout">Logout</a></li>
+            </ul>
+            <ul>
+                <li><a class='link' href="/">Home</a></li>
+                <li><a class='link' href="/blog">Posts</a></li>
+                <li><a class='link' href="/newpost">New_Post</a></li>
+            </ul>
+        </nav>
+        <main>
+        {% block content %} 
+        {% endblock %}
+        </main>
 
-    {% block content %}
-    {% endblock %}
-
-</body>
+        <footer>
+            <p>Zico</p>
+        </footer>
+    </body>
 </html>
